system-report/error.log
./system-report/hello.c: In function ‘main’:
./system-report/hello.c:4:26: error: expected ‘;’ before ‘return’
    4 |     printf("Hello world")   // ❌ Missing semicolon here
      |                          ^
      |                          ;
    5 |     return 0;
      |     ~~~~~~                
